--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
   <h5>E ele é um site de pesquisa</h5>
 
-  <strong>Fim da aula</strong>>
+
+  <button><a href="https://www.google.com.br/" title="button">Saiba mais</a>
+  </button>
+  <strong>Fim da aula</strong>
 </body>
 
 </html>
